--- a/views/product.slim
+++ b/views/product.slim
@@ -6,7 +6,7 @@ form action="/product" class="form"
 
 div class="title"
   h2 #{@product.name}
-div id="general_info" class="tab_content"
+div id="general_info" class="tab_content hidden"
   h2 General Info
   span id="content_text"
     | #{@product.general_info}
